tldraw/apps/tldraw-logseq/src/styles.css
/* ... */
.tl-stroke-hitarea {
  fill: none;
  stroke: transparent;
  stroke-width: calc(24px * var(--tl-scale));
  pointer-events: stroke;
  stroke-linecap: round;
  stroke-linejoin: round;
}

.tl-text-label-wrapper {
  @apply absolute inset-0 flex items-center justify-center;

  pointer-events: none;
  user-select: none;
  font-family: var(--ls-font-family);
}

.tl-text-label-inner-wrapper {
  position: absolute;
  padding: 4px;
  z-index: 1;
  min-height: 1px;
  min-width: 1px;
  line-height: 1;
  outline: 0;
  font-weight: 500;
  text-align: center;
  backface-visibility: hidden;
  user-select: none;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.tl-text-label-textarea {
  @apply absolute inset-0;

  z-index: 1;
  border: none;
  padding: 4px;
  resize: none;
  text-align: inherit;
  min-height: inherit;
  min-width: inherit;
  line-height: inherit;
  letter-spacing: inherit;
  outline: 0;
  font-weight: inherit;
  overflow: hidden;
  backface-visibility: hidden;
  display: inline-block;
  pointer-events: all;
  background: var(--colors-boundsBg);
  user-select: text;
  -webkit-font-smoothing: subpixel-antialiased;
  white-space: pre-wrap;
  overflow-wrap: break-word;

  &:focus {
    outline: none;
    border: none;
  }
}

.tl-preview-minimap {
  height: 300px;
  width: 400px;

  /* Set top to be the viewport minus 10px */
  bottom: calc(100vh - 320px);

  left: 16px;
  position: absolute;
  border: 1px solid black;
  background-color: #fff;
  pointer-events: all;
}

.tl-preview-minimap-toggle {
  @apply absolute flex items-center justify-center text-sm;

  top: 60px;
  right: 50px;
  z-index: 1;
  width: 32px;
  height: 32px;
  border-radius: 4px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
  background: white;
  cursor: pointer;

  &[data-active='true'] {
    background: #eee;
  }
}

.tl-quick-search {
  width: fit-content;
  position: relative;
}

.tl-quick-search-icon {
  flex-shrink: 0;
}

.tl-quick-search-indicator {
  @apply absolute flex items-center	justify-center;

  background-color: var(--ls-secondary-background-color);
  font-size: 22px;
  right: calc(100% + 12px);
  height: 34px;
  width: 34px;
  border-radius: 50%;
  top: calc(50% - 17px);
}

.tl-quick-search-input-container {
  @apply flex items-center rounded-lg text-base;

  background-color: var(--ls-secondary-background-color);
  padding: 6px 16px;
  box-shadow: var(--shadow-small);
}

.tl-quick-search-input-filter {
  @apply flex items-center text-sm;

  background: rgba(0, 0, 0, 0.1);
  padding: 2px 8px;
  white-space: nowrap;
  gap: 8px;
  border-radius: 5px;
  margin-right: 8px;
}

.tl-quick-search-input-filter-remove {
  @apply flex items-center justify-center;

  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: var(--ls-block-bullet-border-color);

  &:hover {
    background-color: rgba(0, 0, 0, 0.5) !important;
  }

  > i.ti {
    transform: translateY(-0.5px);
  }
}

.tl-input {
  position: relative;
}

.tl-input-sizer {
  position: relative;
}

.tl-text-input {
  @apply absolute inset-0;

  outline: none;
}

.tl-input-hidden {
  white-space: pre;
  opacity: 0;
  min-height: 24px;
  min-width: 60px;
}

.tl-quick-search-input {
  min-width: 240px;
}

.tl-quick-search-options {
  @apply absolute left-0 w-full flex;

  top: calc(100% + 12px);
  background-color: var(--ls-primary-background-color);
  max-height: 300px;
  min-width: 460px;
  box-shadow: var(--shadow-large);
  overflow-y: auto;
  flex-direction: column;
  border-radius: 8px;
  overscroll-behavior: none;
}

.tl-quick-search-option {
  @apply flex text-sm;

  flex-flow: column;
  padding: 8px 16px;
  cursor: pointer;
  gap: 0.5em;

  &[data-focused='true'] {
    background-color: var(--ls-menu-hover-color, #f4f5f7);
  }
}

.tl-quick-search-option-row {
  display: flex;
  gap: 0.5em;

  .breadcrumb {
    margin: 0;
  }
}

.tl-quick-search-option-placeholder {
  width: 20px;
  flex-shrink: 0;
}

.tl-quick-search-option-breadcrumb {
  opacity: 0.5;
}

.tl-logseq-portal-container {
  @apply flex flex-col rounded-lg absolute;

  top: 0;
  left: 0;
  transform: translate(1px, 1px);
  overscroll-behavior: none;
  opacity: 1;
  user-select: text;
  transform-origin: top left;

  &[data-collapsed='true'] {
    @apply overflow-hidden;
  }

  &[data-portal-selected='true'] {
    filter: brightness(0.9);
  }
}

.tl-logseq-portal-header {
  @apply flex items-center w-full;

  height: 40px;
  flex-shrink: 0;
  background: transparent;
  color: var(--ls-title-text-color);
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  padding: 0 1rem;
  gap: 0.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;

  .page-ref {
    color: var(--ls-title-text-color);
  }
}

.tl-type-tag {
  @apply flex items-center justify-center rounded text-base;

  flex-shrink: 0;
  width: 20px;
  height: 20px;
  line-height: 1;
  color: #fff;
  background: rgba(0, 0, 0, 0.5);
  order: 0;
  flex-grow: 0;
}

.tl-html-container {
  @apply h-full w-full m-0 relative flex flex-col;
  user-select: text;
  transform-origin: top left;
}

.tl-html-anchor {
  width: fit-content;
}

.tl-html-anchor > iframe {
  @apply h-full w-full !important;
  margin: 0;
}

.tl-video-container {
  @apply h-full w-full m-0 relative;

  > video {
    @apply h-full w-full m-0 relative;
  }
}

.tl-logseq-cp-container {
  @apply h-full w-full rounded-lg;

  overscroll-behavior: none;
  flex: 1 1 0%;
  cursor: default;
}

.tl-highlighted {
  @apply p-0 rounded-none;
}

.logseq-img-icon {
  width: 20px;
  height: 20px;
  border-radius: 4px;
  box-shadow: 0 8px 12px 0 #85c8c81a, 0 4px 32px 0 #85c8c880;
}

.tl-target-not-found {
  @apply flex h-full w-full items-center justify-center;
}
/* ... */

